--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	
 	<div class="slider_main">
 	
-	<center><img src="C:\Users\Charu Saini\Downloads\CAUGHT LIFE goals.jpg"></center>
+	<center><img src="\CAUGHT LIFE goals.jpg"></center>
 	<!--<div><h1>dfgdfgfhfghf</h1></div>-->	
 	</div>
 	
